# Siryo-Differential-Drive-Robot

./: CMakeLists.txt  README.md  package.xml
Siryo/Arduino/Siryo_Motor_Controller/: Siryo_Motor_Controller.ino
Siryo/Siryo_Motor_Controller/: Siryo_Motor_Controller.ino
Siryo/launch/: siryo.launch
Siryo_Motor_Controller/: Siryo_Motor_Controller.ino
data/maps/: casermabis-map.pgm  casermabis-map.yaml
launch/: amcl.launch  camera.launch  coreLauncher.launch  core_launcher.launch  core_w_keyboard.launch  gmapping.launch  hector_mapping.launch  imu_ekf.launch  keyboard.launch  launcherKeyboard.launch  localiz.launch  move_base.launch  pose_ekf.launch  visual.launch
motor controller/: motor_controller.ino
motor_controller/: motor_controller.ino
motor_controller/lib/ros_lib/custom_messages/: DynamicGrid.h  floatStamped.h  lines.h  obstacle.h  obstacle_list.h  radar_msg.h  radar_point.h
motor_controller/lib/ros_lib/moveit_msgs/: GetCartesianPath.h  GetStateValidity.h
scripts/: calibrate_imu.py  cameraMotor.py  camera_bridge.py  camera_manager.py  imu_mpu.py  launchSiryo.sh  launch_siryo.sh  setCameraAngle.py
siryo/Siryo_Motor_Controller/: Siryo_Motor_Controller.ino
siryo/launch/: launcher.launch
src/: EncodersOdometry.cpp  OdometryPosition.cpp  encoders_odometry.cpp
